--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2673,12 +2673,18 @@ footer {
 }
 
 .about-us-ortodoncista {
+    display: none;
+}
+
+.about-us-ortodoncista-mquery {
+    display: block;
     top: 50px;
     left: calc(30 / 430 * 100vw);
-    width: max-content;
+    width: 100%;
     height: 360px;
     border-radius: 30px 0 0 30px;
     object-fit: contain;
+    position: relative;
 }
 
 .about-us-the-challengue-we {
