--- a/css/style.css
+++ b/css/style.css
@@ -4472,6 +4472,10 @@ header {
     border-radius: calc(30 / 1080 * 100vh) calc(30 / 1920 * 100vw);
 }
 
+.about-us-ortodoncista-mquery {
+    display: none;
+}
+
 .about-us-faced-with-the {
     position: absolute;
     width: calc(796 / 1920 * 100vw);
