--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2923,6 +2923,77 @@ footer {
     height: 301px;
 }
 /* About us End */
+
+/* Case studies */
+.case-studies-text-wrapper {
+    position: absolute;
+    top: 159px;
+    left: calc(73 / 430 * 100vw);
+    color: #1F4283;
+    text-align: center;
+    font-family: Gordita;
+    font-size: calc(50 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-2 / 430 * 100vw);
+}
+
+.case-studies-div {
+    position: absolute;
+    top: 241px;
+    left: calc(30 / 430 * 100vw);
+    color:#707C93;
+    text-align: center;
+    font-family: "PP Neue Montreal";
+    font-size: calc(16 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 126%;
+    width: calc(370 / 430 * 100vw);
+}
+
+.case-studies-frame {
+    width: 100%;
+    left: 0;
+    top: 350px;
+}
+
+.case-studies-DSC {
+    width: calc(242.286 / 430 * 100vw);
+    height: 333.899px;
+    top: 45.32px;
+    left: calc(93.86 / 430 * 100vw);
+    border-radius: 13.951px;
+    object-fit: contain;
+    background-image: url('../media/icons/content-home/DSC_3163-2\ 1\(23\).png');
+}
+
+.case-studies-time {
+    display: none;
+}
+
+.before-text {
+    display: none;
+}
+
+.after-text {
+    display: none;
+}
+
+.scroll-text {
+    display: none;
+}
+
+.procedural-video {
+    display: none;
+}
+
+.case-studies-bar-case-studies {
+    position: absolute;
+    top: 689px;
+}
+/* Case studies End */
 }
 
 /*Media queries para trabajar Tablets como las Surfaces*/
