--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3037,15 +3037,15 @@ footer {
 }
 
 .case-studies-bar-overlap {
-    top: 651.58;
+    top: 631.58;
     left: calc(10 / 430 * 100vw);
     height: auto;
     width: auto;
 }
 
 .case-studies-bar-case-study-2 {
-    top: 651.58;
-    left: calc(150 / 430 * 100vw);
+    top: 631.58;
+    left: calc(154 / 430 * 100vw);
     height: auto;
     width: auto;
     gap: 4px;
@@ -3055,8 +3055,8 @@ footer {
 }
 
 .case-studies-bar-case-study-3 {
-    top: 651.58;
-    left: calc(273 / 430 * 100vw);
+    top: 631.58;
+    left: calc(300 / 430 * 100vw);
     height: auto;
     width: auto;
     gap: 4px;
@@ -3178,7 +3178,7 @@ footer {
 .btn-mquery-case-studies-img button {
     width: calc(50 / 430 * 100vw);
     height: 50px;
-    fill: rgba(255, 255, 255, 0.10);
+    background-color: rgba(255, 255, 255, 0.10);
     border: 1px solid #FFF;
     backdrop-filter: blur(5px);
     background-color: transparent;
